[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sessions-salvager"
version = "0.1.0"
description = "Convert ChatGPT/Claude exports and optionally analyze conversations"
readme = "README.md"
requires-python = ">=3.10"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312
skipsdist = true

[testenv]
commands =
    python -m unittest discover -s tests -p \"test_*.py\"
"""
